     a smaller C source file, to minimize the compilation unit size impacted
     by development iterations. [issue #2097]
   * Common code hardening: added sanity-checking for dynamically constructed
     or selected formatting strings with variable-argument list methods
     (typically used with log printing, `dstate` setting, etc.) [#2450, #3016]
   * Refactored repetitive implementations of `inet_ntopSS()` (nee
     `inet_ntopW()` in `upsd.c`) and `inet_ntopAI()` methods into `common.c`,
     so now they can be re-used or expanded more easily. [#2916]

 - `upsd` updates:
   * Fixed two bugs about printing the "further (ignored) addresses resolved
     for this name": the way to extract IP address string was not portable
     and misfired on some platforms, and the way to print had a theoretical
     potential for buffer overflow. [#2915]
   * Print arguments of a processed command into the debug log, to help track
     down what unsupported queries are about, etc. (but only endeavor to spend
     time, RAM and CPU on this if debug verbosity is high enough). Hide the
     sensitive commands' parameters unless verbosity is unusually high. [#3023]

 - `upsdrvquery` API updates [#2969]:
   * Added `upsdrvquery_oneshot_conn()` for issuing one-shot queries using an
     existing `udq_pipe_conn_t *` connection. The caller manages the
     connection's lifecycle, and the function includes a best-effort call to
     restore broadcast mode after the query to return the connection as it was.
   * Added `upsdrvquery_oneshot_sockfn()` for initiating one-shot queries using
     a socket filename. Shares internal logic with the existing
     `upsdrvquery_oneshot()`, which uses a UPS and driver name, respectively.
   * Introduced `upsdrvquery_restore_broadcast()` to explicitly restore
     broadcast mode (`BROADCAST 1`) on a connection, helping return it to a
     consistent and talkative state.
   * Revised connection ownership handling: internal functions like