@@ -92,6 +92,8 @@ https://github.com/networkupstools/nut/milestone/9
    * Common code hardening: added sanity-checking for dynamically constructed
      or selected formatting strings with variable-argument list methods
      (typically used with log printing, `dstate` setting, etc.) [#2450, #3016]
+     - Warn if `%n` formatting string is used -- it is deprecated in some
+       newer distros due to security concerns.
    * Refactored repetitive implementations of `inet_ntopSS()` (nee
      `inet_ntopW()` in `upsd.c`) and `inet_ntopAI()` methods into `common.c`,
      so now they can be re-used or expanded more easily. [#2916]
